--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "chalk": "^2.3.1",
     "minimist": "^1.1.0",
+    "node-fetch": "^2.1.2",
     "once": "^1.3.0",
     "split": "^1.0.0",
     "through": "^2.3.4"
