--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "url": "https://github.com/jeasonstudio/hfm/issues"
   },
   "dependencies": {
+    "anymatch": "^2.0.0",
     "chalk": "^2.3.1",
     "commander": "^2.15.1",
     "js-yaml": "^3.12.0",
