--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hfm",
   "description": "Host file manager for command line.",
-  "version": "1.0.2",
+  "version": "2.0.1",
   "author": {
     "name": "Jeason",
     "email": "me@jeasonstudio.cn"
@@ -15,16 +15,11 @@
     "chalk": "^2.3.1",
     "commander": "^2.15.1",
     "js-yaml": "^3.12.0",
-    "minimist": "^1.1.0",
-    "node-fetch": "^2.1.2",
-    "once": "^1.3.0",
-    "split": "^1.0.0",
-    "through": "^2.3.4"
+    "node-fetch": "^2.1.2"
   },
   "devDependencies": {
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.12.0",
-    "standard": "*",
     "tape": "^4.0.0"
   },
   "homepage": "https://github.com/jeasonstudio/hfm",
